--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://valee-lim.github.io/timer",
+  "homepage": "http://valeelim.github.io/timer",
   "name": "button",
   "version": "0.1.0",
   "private": true,
