--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.2",
+    "react-scripts": "^1.1.5",
     "tachyons": "^4.12.0",
     "web-vitals": "^1.1.0"
   },
